syntax = "proto3";

package grpc_example;

option go_package = "github.com/tarea2/grpc_example";

service Saludador {
    rpc DecirHola (SolicitudHola) returns (RespuestaHola) {}
}

message SolicitudHola {
    string name = 1;
}

message RespuestaHola {
    string message = 1;
}