syntax = "proto3";

package grpc;

option go_package = "github.com/tarea2/grpc-example";

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}